sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {
  var y:Int = 0
  for(j<-0 to getNombreValeurs()-1){
    x = true
    for(i<- 0 to getNombreValeurs()-2-y){
      if(plusPetit(i+1,i)){
        echange(i,i+1)
      }
    }
    y += 1
  }
}